gradio.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gradio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gradio
  template:
    metadata:
      labels:
        app: gradio
    spec:
      containers:
        - name: gradio
          image: yolo-gradio:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 7860
          resources:
            requests:
              memory: "1024Mi"
              cpu: "1000m"
            limits:
              memory: "2048Mi"
              cpu: "2000m"
---
apiVersion: v1
kind: Service
metadata:
  name: gradio-svc
spec:
  selector:
    app: gradio
  ports:
    - protocol: TCP
      port: 7860
      targetPort: 7860
