ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingress
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`zerohertz.xyz`)
      kind: Rule
      services:
        - name: gradio-svc
          port: 7860
